--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/fs-extra": "^11.0.1",
     "@typescript-eslint/eslint-plugin": "^5.60.1",
     "eslint": "^8.44.0",
     "eslint-config-standard-with-typescript": "^36.0.0",
@@ -21,6 +22,8 @@
     "typescript": "^5.1.6"
   },
   "dependencies": {
+    "fs-extra": "^11.1.1",
+    "node-cron": "^3.0.2",
     "ts-node": "^10.9.1"
   }
 }
